z-index on correct element

--- a/jujugui/static/gui/src/app/assets/css/base.scss
+++ b/jujugui/static/gui/src/app/assets/css/base.scss
@@ -58,7 +58,7 @@ $z-indexed-elements: search-results-list-block__tags,
   deployment-bar-panel,
   top-page,
   header-banner-breadcrumbs,
-  env-list__environment,
+  env-list-panel,
   white-box,
   entity-sticky-header,
   header-banner-search,
