--- a/jujugui/static/gui/src/app/components/env-switcher/list/_list.scss
+++ b/jujugui/static/gui/src/app/components/env-switcher/list/_list.scss
@@ -3,7 +3,7 @@
   box-sizing: border-box;
   width: $width;
   margin-left: -20px;
-  z-index: 1;
+  z-index: index($z-indexed-elements, env-list-panel);
 
   &:before {
     @include diamond($white);
@@ -29,7 +29,7 @@
     &__environment {
       position: relative;
       // The items need to be above the diamond.
-      z-index: index($z-indexed-elements, env-list__environment);
+      z-index: 1;
       list-style-type: none;
       padding: 10px 20px;
       margin-bottom: 0;
